Changelog
---------

0.4.2 (released 2009-05-11)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Add semicolon after javascripts to make sure any function-block is
  properly terminated (necessary due to concatenation). [malthe]

0.4.1 (released 2009-04-20)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Parse unicode body to ensure correct character decoding. [malthe]

0.4 (released 2009-04-15)
~~~~~~~~~~~~~~~~~~~~~~~~~

- If a response has status '304 Not Modified', update the ``ttl`` but
  not the content. [malthe]

- If a script- or style-tag does not have a source or link, ignore
  it. [malthe]

- Unquote request URL when querying cache. [malthe]

- Added support for ``repoze.xmliter`` which allows reusing an
  ``lxml`` document tree between middlewares. [malthe]

- Media types for stylesheets are now taken into account when merging
  the resources. Squeze uses CSS2 `@media <type>` syntax. [jvloothuis]

0.3 (released 2008-10-08)
~~~~~~~~~~~~~~~~~~~~~~~~~

- Relative URLs appearing in stylesheets are now made absolute before
  merging. [malthe]

0.2 (released 2008-10-03)
~~~~~~~~~~~~~~~~~~~~~~~~~

- Add setuptools as a dependency. [malthe]

0.1 (released 2008-10-02)
~~~~~~~~~~~~~~~~~~~~~~~~~

- Initial release.

